@@ -102,6 +102,10 @@
 #gptofoo escp2-c41ux printer/Epson-Stylus_C41UX
 #gptofoo escp2-c42sx printer/Epson-Stylus_C42SX
 #gptofoo escp2-c42ux printer/Epson-Stylus_C42UX
+#gptofoo escp2-c43sx printer/Epson-Stylus_C43SX
+#gptofoo escp2-c43ux printer/Epson-Stylus_C43UX
+#gptofoo escp2-c44sx printer/Epson-Stylus_C44SX
+#gptofoo escp2-c44ux printer/Epson-Stylus_C44UX
 #gptofoo escp2-c50 printer/Epson-Stylus_C50
 #gptofoo escp2-c60 printer/Epson-Stylus_C60
 #gptofoo escp2-c61 printer/Epson-Stylus_C61
