@@ -1,5 +1,5 @@
 /*
- * "$Id: print-escp2-data.c,v 1.117 2003/07/12 21:27:30 rlk Exp $"
+ * "$Id: print-escp2-data.c,v 1.118 2003/07/15 01:17:35 rlk Exp $"
  *
  *   Print plug-in EPSON ESC/P2 driver for the GIMP.
  *
@@ -938,7 +938,7 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
     variable_bits, variable_base_res, &default_input_slot_list,
     &standard_quality_list, &new_init_sequence, &je_deinit_sequence
   },
-  /* 36: Stylus Photo 785/890/895/915 */
+  /* 36: Stylus Photo 785/890/895/915/935 */
   {
     (MODEL_VARIABLE_YES | MODEL_COMMAND_2000 | MODEL_GRAYMODE_YES |
      MODEL_ROLLFEED_YES | MODEL_XZEROMARGIN_YES | MODEL_VACUUM_NO |
@@ -1258,6 +1258,20 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
     c1_8pl_dotsizes, c1_8pl_densities, &stpi_escp2_variable_2pl_drops,
     stpi_escp2_superfine_reslist, &stpi_escp2_photo_gen2_inkgroup,
     c1_8_bits, c1_8_base_res, &cutter_roll_feed_input_slot_list,
+    &standard_quality_list, &new_init_sequence, &je_deinit_sequence
+  },
+  /* 59: Stylus C43SX/C43UX/C44SX/C44UX */
+  {
+    (MODEL_VARIABLE_YES | MODEL_COMMAND_2000 | MODEL_GRAYMODE_YES |
+     MODEL_ROLLFEED_NO | MODEL_XZEROMARGIN_NO | MODEL_VACUUM_NO |
+     MODEL_FAST_360_NO | MODEL_SEND_ZERO_ADVANCE_YES),
+    15, 15, 3, 48, 48, 3, 48, 48, 3, 4,
+    360, 14400, -1, 2880, 720, 90, 90, 0, 1, 0, 0, -99, 0, 0,
+    INCH(17 / 2), INCH(1200), INCH(2), INCH(4),
+    9, 9, 0, 9, 9, 9, 9, 9, 9, 9, 0, 0, 9, 9, 0, 0,
+    c4pl_dotsizes, c4pl_densities, &stpi_escp2_variable_4pl_drops,
+    stpi_escp2_1440dpi_reslist, &stpi_escp2_x80_inkgroup,
+    variable_bits, variable_base_res, &default_input_slot_list,
     &standard_quality_list, &new_init_sequence, &je_deinit_sequence
   },
 };
